--- a/src/Style.css
+++ b/src/Style.css
@@ -29,9 +29,19 @@
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
+  width: 100%;
 }
 .bottomDiv{
   position: relative;
-    left: 6rem;
-    bottom: 4rem;
+    left: 40%;
+    bottom: 1rem;
+}
+.cardWithoutDetail{
+  height: 20rem;
+}
+.btnDiv{
+  position: relative;
+    top: 6px;
+    display: flex;
+    justify-content: space-evenly;
 }
